Completed comparison functions poc

--- a/tenny_modules/field_search_example.ipynb
+++ b/tenny_modules/field_search_example.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 214,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 215,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,27 +24,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 216,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def add_shape(field, shape):\n",
-    "    for row in shape:\n",
-    "        for x, y in row:\n",
-    "            field[x][y] = 1\n",
+    "def add_shape(field, shape, xy, val = 1):\n",
+    "    for x, y in shape:\n",
+    "        field[x + xy[0]][y + xy[1]] = val\n",
     "    return field"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 217,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0, 1, 0, 1, 0, 1, 0, 1, 0, 1]\n",
+      "[0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
       "[0, 0, 0, 0, 1, 0, 0, 0, 0, 0]\n",
       "[0, 0, 0, 0, 1, 0, 0, 0, 0, 0]\n",
       "[0, 0, 0, 0, 1, 0, 0, 0, 0, 0]\n",
@@ -60,7 +59,7 @@
    "source": [
     "# Blank board\n",
     "input = [\n",
-    "    [0, 1, 0, 1, 0, 1, 0, 1, 0, 1],\n",
+    "    [0, 0, 0, 0, 0, 0, 0, 0, 0, 0],\n",
     "    [0, 0, 0, 0, 1, 0, 0, 0, 0, 0],\n",
     "    [0, 0, 0, 0, 1, 0, 0, 0, 0, 0],\n",
     "    [0, 0, 0, 0, 1, 0, 0, 0, 0, 0],\n",
@@ -76,17 +75,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 218,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0, 1, 0, 1, 0, 1, 0, 1, 0, 1]\n",
+      "[0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
+      "[0, 0, 0, 0, 1, 0, 0, 0, 0, 0]\n",
       "[0, 1, 1, 1, 1, 0, 0, 0, 0, 0]\n",
-      "[0, 1, 1, 1, 1, 0, 0, 0, 0, 0]\n",
-      "[0, 1, 1, 1, 1, 0, 0, 0, 0, 0]\n",
+      "[0, 0, 0, 1, 1, 0, 0, 0, 0, 0]\n",
       "[0, 0, 0, 0, 1, 0, 0, 0, 0, 0]\n",
       "[0, 0, 0, 0, 1, 0, 0, 0, 0, 0]\n",
       "[0, 0, 0, 0, 1, 0, 0, 0, 0, 0]\n",
@@ -97,42 +96,119 @@
     }
    ],
    "source": [
-    "shape = (\n",
-    "    ((1, 1), (1, 2), (1, 3)),\n",
-    "    ((2, 1), (2, 2), (2, 3)),\n",
-    "    ((3, 1), (3, 2), (3, 3))\n",
-    ")\n",
-    "input = add_shape(input, shape)\n",
+    "shape = [\n",
+    "    [0, 0], [0, 1], [0, 2],\n",
+    "    [1, 2]\n",
+    "]\n",
+    "shape_offset = (2, 1)\n",
+    "input = add_shape(input, shape, shape_offset)\n",
     "print_field(input)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 219,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0, 1, 0, 1, 0, 1, 0, 1, 0, 1]\n",
-      "[0, 1, 1, 1, 1, 0, 0, 0, 0, 0]\n",
-      "[0, 1, 1, 1, 1, 0, 0, 0, 0, 0]\n",
-      "[0, 1, 1, 1, 1, 0, 0, 0, 0, 0]\n",
+      "[0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
+      "[2, 2, 2, 2, 3, 0, 0, 0, 0, 0]\n",
+      "[2, 1, 1, 1, 3, 0, 0, 0, 0, 0]\n",
+      "[2, 2, 2, 1, 3, 0, 0, 0, 0, 0]\n",
+      "[0, 0, 2, 2, 3, 0, 0, 0, 0, 0]\n",
       "[0, 0, 0, 0, 1, 0, 0, 0, 0, 0]\n",
       "[0, 0, 0, 0, 1, 0, 0, 0, 0, 0]\n",
       "[0, 0, 0, 0, 1, 0, 0, 0, 0, 0]\n",
       "[0, 0, 0, 0, 1, 0, 0, 0, 0, 0]\n",
-      "[0, 0, 0, 0, 1, 0, 0, 0, 0, 0]\n",
-      "[0, 0, 0, 0, 1, 0, 0, 0, 0, 0]\n",
-      "\n",
-      "top: [True, False, True]\n",
-      "bottom: [False, False, False]\n",
-      "left: [False, False, False]\n",
-      "right: [True, True, True]\n"
+      "[0, 0, 0, 0, 1, 0, 0, 0, 0, 0]\n"
      ]
     }
    ],
+   "source": [
+    "def is_first(x):\n",
+    "    return x == 0\n",
+    "\n",
+    "def is_last(x):\n",
+    "    return x == 9\n",
+    "\n",
+    "def get_true_coords(coord, offset):\n",
+    "    return (coord[0] + offset[0], coord[1] + offset[1])\n",
+    "\n",
+    "def coord_is_full(field, coord):\n",
+    "    return field[coord[0]][coord[1]] == 1\n",
+    "\n",
+    "def get_coord_neighbours(x, y):\n",
+    "    neighbours = []\n",
+    "    top_neighbour = None\n",
+    "    left_neighbour = None\n",
+    "    right_neighbour = None\n",
+    "    bottom_neighbour = None\n",
+    "    top_left_neighbour = None\n",
+    "    top_right_neighbour = None\n",
+    "    bottom_left_neighbour = None\n",
+    "    bottom_right_neighbour = None\n",
+    "\n",
+    "    if is_first(x) == False:\n",
+    "        left_neighbour = (x - 1, y)\n",
+    "\n",
+    "    if is_last(x) == False:\n",
+    "        right_neighbour = (x + 1, y)\n",
+    "\n",
+    "    if is_first(y) == False:\n",
+    "        top_neighbour = (x, y - 1)\n",
+    "\n",
+    "    if is_last(y) == False:\n",
+    "        bottom_neighbour = (x, y + 1)\n",
+    "\n",
+    "    if is_first(x) == False and is_first(y) == False:\n",
+    "        top_left_neighbour = (x - 1, y - 1)\n",
+    "\n",
+    "    if is_first(x) == False and is_last(y) == False:\n",
+    "        top_right_neighbour = (x - 1, y + 1)\n",
+    "\n",
+    "    if is_last(x) == False and is_first(y) == False:\n",
+    "        bottom_left_neighbour = (x + 1, y - 1)\n",
+    "\n",
+    "    if is_last(x) == False and is_last(y) == False:\n",
+    "        bottom_right_neighbour = (x + 1, y + 1)\n",
+    "    \n",
+    "    neighbours.append(left_neighbour)\n",
+    "    neighbours.append(right_neighbour)\n",
+    "    neighbours.append(top_neighbour)\n",
+    "    neighbours.append(bottom_neighbour)\n",
+    "    neighbours.append(top_left_neighbour)\n",
+    "    neighbours.append(top_right_neighbour)\n",
+    "    neighbours.append(bottom_left_neighbour)\n",
+    "    neighbours.append(bottom_right_neighbour)\n",
+    "    return [n for n in neighbours if n != None]\n",
+    "\n",
+    "def get_shape_neighbours(coords):\n",
+    "    all_neighbours = []\n",
+    "    for x, y in coords:\n",
+    "        neighbours = get_coord_neighbours(x, y)\n",
+    "        all_neighbours = all_neighbours + [neighbour for neighbour in neighbours if neighbour not in coords]\n",
+    "    return all_neighbours\n",
+    "\n",
+    "def check_shape_surrounds(shape, offset, field):\n",
+    "    true_shape = [get_true_coords(coord, offset) for coord in shape]\n",
+    "    neighbours = get_shape_neighbours(true_shape)\n",
+    "    neighbour_gaps = [coord for coord in neighbours if coord_is_full(field, coord) == False]\n",
+    "    neighbour_borders = [coord for coord in neighbours if coord_is_full(field, coord)]\n",
+    "    field = add_shape(field, neighbour_gaps, (0, 0), 2)\n",
+    "    field = add_shape(field, neighbour_borders, (0, 0), 3)\n",
+    "    return (neighbour_gaps, neighbour_borders)\n",
+    "\n",
+    "check_shape_surrounds(shape, shape_offset, input)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 220,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "def is_first_row(x):\n",
     "    return x == 0\n",
@@ -141,6 +217,9 @@
     "    return x == 0\n",
     "\n",
     "def is_last_row(x):\n",
+    "    return x == 9\n",
+    "\n",
+    "def is_last_col(x):\n",
     "    return x == 9\n",
     "\n",
     "def check_row(field, left, right, offset, operator = \"sub\"):\n",
@@ -215,18 +294,7 @@
     "    if is_last_row(bottom_right[0]):\n",
     "        return [True for x in range(top_right[1], bottom_right[1] + 1)]\n",
     "    \n",
-    "    return check_column(field, top_right, bottom_right, offset, \"add\")\n",
-    "\n",
-    "print_field(input)\n",
-    "print()\n",
-    "top_state = check_top_surrounds(input, shape)\n",
-    "print(f\"top: {top_state}\")\n",
-    "bottom_state = check_bottom_surrounds(input, shape)\n",
-    "print(f\"bottom: {bottom_state}\")\n",
-    "left_state = check_left_surrounds(input, shape)\n",
-    "print(f\"left: {left_state}\")\n",
-    "right_state = check_right_surrounds(input, shape)\n",
-    "print(f\"right: {right_state}\")"
+    "    return check_column(field, top_right, bottom_right, offset, \"add\")"
    ]
   },
   {
@@ -239,10 +307,10 @@
  ],
  "metadata": {
   "interpreter": {
-   "hash": "cd6d1acce2750b7268c59f1cdcb59eca0ffea8d1cd19b57032d5d19935850d22"
+   "hash": "08fbc2265cd6e700bcbdc4d72cb8b78e5bcd8f8ce9946385a9ebb9664c27919c"
   },
   "kernelspec": {
-   "display_name": "Python 3.10.4 64-bit",
+   "display_name": "Python 3.10.0 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -256,7 +324,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4"
+   "version": "3.10.0"
   },
   "orig_nbformat": 4
  },
